--- a/InteractiveMap/templates/home.html
+++ b/InteractiveMap/templates/home.html
@@ -496,7 +496,7 @@
                                                 <input type="text" name="textNotes" id="textNotes">
 
                                                 <p>Enter a color code:</p>
-                                                <input type="color" name="colorInput" id="colorInput">
+                                                <input type="color" name="colorInput" id="colorInput" value="#FF0000">
                                                 <button id="setTextBtn">Enter</button>
                                             `;
 
